[stats] document the runnable demo, drop dead build settings sbt lint flagged